RESOLVED FIXED212291
Stuttery overflow scrolling in slow-scrolling regions (facebook messenger, feedly.com)
https://bugs.webkit.org/show_bug.cgi?id=212291
Summary Stuttery overflow scrolling in slow-scrolling regions (facebook messenger, fe...
Simon Fraser (smfr)
Reported 2020-05-22 16:57:00 PDT
Stuttery overflow scrolling in slow-scrolling regions (facebook messenger, feedly.com)
Attachments
Patch (3.94 KB, patch)
2020-05-22 16:58 PDT, Simon Fraser (smfr)
thorton: review+
Patch (8.84 KB, patch)
2020-05-22 19:56 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-05-22 16:58:51 PDT
Simon Fraser (smfr)
Comment 2 2020-05-22 16:58:54 PDT
Simon Fraser (smfr)
Comment 3 2020-05-22 17:30:47 PDT
Seems to break fast/scrolling/arrow-key-scroll-in-rtl-document.html, will investigate.
Simon Fraser (smfr)
Comment 4 2020-05-22 19:56:14 PDT
EWS
Comment 5 2020-05-22 21:23:52 PDT
Committed r262094: <https://trac.webkit.org/changeset/262094> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400104 [details].
Note You need to log in before you can comment on or make changes to this bug.